Fix .hero banner-layout issue. Default layout responsive up to Galaxy S5

--- a/_scss/3-default-components/_index-banners.scss
+++ b/_scss/3-default-components/_index-banners.scss
@@ -22,3 +22,9 @@
   margin-top: -20px;
   z-index: 9993;
 }
+
+@media screen and (min-width: 360px) and (max-width: 374px) {
+  .hero {
+    background-size: cover;
+  }
+}
