--- a/css/main.css
+++ b/css/main.css
@@ -908,6 +908,10 @@ a.nowrap {
   margin-top: -20px;
   z-index: 9993; }
 
+@media screen and (min-width: 360px) and (max-width: 374px) {
+  .hero {
+    background-size: cover; } }
+
 .wave {
   width: 100%;
   height: auto;
